<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:elevation="@dimen/elevation"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="?attr/colorPrimary"
                android:elevation="@dimen/no_elevation"
                android:minHeight="?attr/actionBarSize" />
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBarDetail"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/targetImageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_view_height_details"
                    android:padding="@dimen/standard_padding"
                    android:scaleType="fitCenter"
                    android:transitionName="@string/thumbnail" />

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/targetImageView"
                    android:layout_marginBottom="@dimen/cardMarginVerticalExtra"
                    android:layout_marginTop="@dimen/cardMarginVertical"
                    app:cardCornerRadius="@dimen/radius"
                    app:cardElevation="@dimen/card_elevation"
                    app:cardPreventCornerOverlap="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/standard_padding">

                        <TextView
                            android:id="@+id/productName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/standard_padding"
                            android:fontFamily="sans-serif"
                            android:text="@string/product_name"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/productPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/productName"
                            android:layout_margin="@dimen/standard_padding"
                            android:fontFamily="sans-serif"
                            android:text="@string/price"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/big_font"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/productSpecialPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/productName"
                            android:layout_marginBottom="@dimen/standard_padding"
                            android:layout_marginLeft="@dimen/extra_padding"
                            android:layout_marginRight="@dimen/standard_padding"
                            android:layout_marginTop="@dimen/standard_padding"
                            android:layout_toRightOf="@+id/productPrice"
                            android:fontFamily="sans-serif"
                            android:text="@string/specialPrice"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/big_font"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/quantityHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/productPrice"
                            android:layout_margin="@dimen/standard_padding"
                            android:fontFamily="sans-serif"
                            android:text="@string/quantity"
                            android:textColor="@color/colorPrimaryDarkDetailed"
                            android:textSize="@dimen/medium_font" />

                        <TextView
                            android:id="@+id/qty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/productPrice"
                            android:layout_margin="@dimen/standard_padding"
                            android:layout_alignLeft="@+id/warrenty_offered"
                            android:layout_toRightOf="@+id/quantityHeader"
                            android:fontFamily="sans-serif"
                            android:text="@string/qty"
                            android:textSize="@dimen/medium_font" />

                        <TextView
                            android:id="@+id/warrantyHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/quantityHeader"
                            android:layout_margin="@dimen/standard_padding"
                            android:fontFamily="sans-serif"
                            android:text="@string/warranty"
                            android:textColor="@color/colorPrimaryDarkDetailed"
                            android:textSize="@dimen/medium_font" />

                        <TextView
                            android:id="@+id/warrenty_offered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/qty"
                            android:layout_margin="@dimen/standard_padding"
                            android:layout_toRightOf="@+id/warrantyHeader"
                            android:fontFamily="sans-serif"
                            android:text="@string/warranty_offered"
                            android:textSize="@dimen/medium_font" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>


